--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     border-collapse: collapse;
 }
 
+
 .timeline-table th,
 .timeline-table td {
     text-align: left;
@@ -21,6 +22,10 @@ body {
 
 .timeline-container {
     --timeline-height: 500px;
+
+    --colour-background: hsl(120, 10%, 90%);
+    --colour-summary-background: hsl(120, 10%, 80%);;
+
     --colour-category-1: hsl(220, 70%, 57%);
     --colour-category-2: hsl(316, 60%, 60%);
     --colour-category-3: hsl(108, 80%, 70%);
@@ -91,33 +96,42 @@ body {
         }
     }
 
+    display:flex;
+    flex-direction: column;
+    max-height:90vh;
     width: 100%;
+    padding: 0;
+    background-color: var(--colour-background);
+}
+
+.timeline-container,
+.timeline-container * {
     box-sizing: border-box;
-    padding: 1rem;
-    background-color: rgb(230, 236, 230);
 }
 
 
-
-
 .timeline-title {
-    width: 100%;
     font-weight: bold;
     text-align: center;
     padding: 1rem;
+    background-color: var(--colour-summary-background);
 }
 
 .timeline-filter-controls {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 0.5rem;
+    gap:1.6rem;
+    margin-bottom:1rem;
+    padding:0.5rem;
+    background-color: var(--colour-summary-background);
 }
 
 .timeline-categories-group,
 .timeline-search-group {
     display: flex;
     flex-wrap: nowrap;
+    align-items: center;
 }
 
 .timeline-categories-group > label,
@@ -167,24 +181,25 @@ body {
 }
 
 .timeline-summary-container {
-    box-sizing: border-box;
+    position: relative;
     flex-basis: 0;
-    max-height: var(--timeline-height);
-    overflow-y: auto;
+    overflow-y: hidden;
+    background-color: var(--colour-summary-background);
 }
 
 .timeline-summary-text {
-    position: relative;
     text-align: left;
     padding: 1rem 1rem 1rem 1rem;
     word-wrap: break-word;
     opacity: 0;
     transition: opacity 0.3s ease-in-out 0.3s;
+    overflow-y: auto;
+    height:100%;
 }
 
 .timeline-content.show {
     .timeline-summary-container {
-        flex-basis: 30%;
+        flex-basis: 40%;
     }
     .timeline-summary-text {
         opacity: 1;
@@ -195,11 +210,13 @@ body {
 }
 
 .timeline-summary-close-button {
-    position: relative;
+    position: absolute;
+    top:-0.5rem;
+    right:0.5rem;
     display: block;
     margin: 1rem 0 0 1rem;
     padding: 0.3rem 0.5rem;
-    background-color: white;
+    background-color: var(--colour-background);
     cursor: pointer;
     border: none;
 }
@@ -209,15 +226,14 @@ body {
 }
 
 .timeline-chart-container {
+    display:flex;
+    flex-direction: column;
     flex-basis: 100%;
     overflow: hidden;
-    box-sizing: border-box;
     padding: 0.5rem;
 }
 
 .timeline-events {
-    box-sizing: border-box;
-    max-height: var(--timeline-height);
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -225,7 +241,6 @@ body {
 .timeline-event {
     position: relative;
     height: 1.6rem;
-    box-sizing: border-box;
     overflow: visible;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 0.3rem;
@@ -263,11 +278,9 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    box-sizing: border-box;
 }
 
 .timeline-x-axis div {
-    box-sizing: border-box;
     padding: 0.2rem 0 0 0.2rem;
     border-top: 1px solid gray;
     border-right: 1px solid gray;
@@ -284,7 +297,10 @@ body {
     flex-grow: 1;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
+    /* .timeline-container {
+        padding:0;
+    } */
     .timeline-x-axis div {
         display: none;
     }
@@ -301,6 +317,7 @@ body {
         padding-right: 0.2rem;
         flex-basis: 50%;
     }
+
     .timeline-content.show {
         .timeline-summary-container {
             flex-basis: 100%;
@@ -310,6 +327,7 @@ body {
         }
         .timeline-chart-container {
             flex-basis: 0%;
+            padding:0;
         }
     }
 }
