--- a/style.css
+++ b/style.css
@@ -109,10 +109,10 @@ body {
 }
 
 .timeline-title {
-    font-weight: bold;
     text-align: center;
     padding: 1rem;
     background-color: var(--colour-summary-background);
+    margin: 0;
 }
 
 .timeline-filter-controls {
@@ -122,6 +122,10 @@ body {
     gap: 1.6rem;
     padding: 0.5rem 0.5rem 1rem 0.5rem;
     background-color: var(--colour-summary-background);
+}
+
+.timeline-filter-controls label {
+    font-weight: bold;
 }
 
 .timeline-categories-group,
@@ -138,6 +142,10 @@ body {
     flex-shrink: 0;
     text-align: right;
     padding-right: 0.5rem;
+}
+
+.timeline-categories > label {
+    font-weight: normal;
 }
 
 .timeline-categories {
@@ -193,6 +201,19 @@ body {
     transition: opacity 0.3s ease-in-out 0.3s;
     overflow-y: auto;
     height: 100%;
+}
+
+.timeline-summary-text h2,
+.timeline-summary-text h3 {
+    margin-bottom: 0.5rem;
+}
+
+.timeline-summary-dates {
+    margin-bottom: 1rem;
+}
+
+h2 .timeline-summary-title-small {
+    font-weight: normal;
 }
 
 .timeline-summary-text > div {
