--- a/table-timeline.css
+++ b/table-timeline.css
@@ -176,9 +176,6 @@
     & h4 {
         margin: 1rem 0 0.5rem 0;
     }
-    & img {
-        display:none;
-    }
 }
 
 /* Citation numbering */
@@ -212,7 +209,7 @@ figcaption {
     color: var(--colour-darker);
 }
 
-.table-timeline[data-view="text"] .event {
+[data-view="text"] .event {
     margin-left: 0 !important;
     width: auto !important;
     .dates {
@@ -234,7 +231,32 @@ figcaption {
     border-bottom: 1px solid var(--colour-darker);
 }
 
-.table-timeline[data-view="chart"] {
+/* event-image */
+
+.event-image {
+    display:none;
+}
+
+[data-view="text"] .event,
+[data-view="chart"] .container.show-summary {
+    .event-image {
+        display:block;
+        height: 200px;
+        padding:1rem;
+        display:flex;
+        justify-content:center ;
+        & img {
+            max-width:100%;
+            max-height:200px;
+            object-fit:cover;
+        }
+    }
+}
+
+/* end event-image */
+
+
+[data-view="chart"] {
     .container {
         display: flex;
         align-items: flex-start;
@@ -251,7 +273,7 @@ figcaption {
         background-color: var(--colour-lightest);
         transition: flex-basis ease-in-out 300ms, opacity ease-in-out 600ms;
         overflow-wrap: break-word;
-        .summary-image {
+        .event-image {
             display:none;
         }
         .close {
@@ -276,6 +298,9 @@ figcaption {
         .body {
             margin-top: 1rem;
         }
+        .event img {
+            display:none;
+        }
     }
     
     .container.show-summary {
@@ -290,18 +315,6 @@ figcaption {
                 display: block;
                 color:var(--colour-darker);
                 font-size: 1rem;
-            }
-            .summary-image {
-                display:block;
-                height: 200px;
-                padding:1rem;
-                display:flex;
-                justify-content:center ;
-                & img {
-                    max-width:100%;
-                    max-height:200px;
-                    object-fit:cover;
-                }
             }
         }
         .events {
@@ -377,7 +390,7 @@ figcaption {
 }
 
 @media (max-width: 640px) {
-    .table-timeline[data-view="chart"] .container.show-summary {
+    [data-view="chart"] .container.show-summary {
         gap:0;
         .summary {
             flex-basis: 100%;
@@ -392,7 +405,7 @@ figcaption {
 }
 
 @media (max-width: 500px) {
-    .table-timeline[data-view="chart"] .x-axis {
+    [data-view="chart"] .x-axis {
         .x-axis-label {
             display: none;
             flex-basis: 50% !important;
