--- a/table-timeline.css
+++ b/table-timeline.css
@@ -1,11 +1,14 @@
 :host {
     --border-width: 1px;
+    --border-width-filter-control: 1px;
 
-    --colour-darkest: hsl(120, 5%, 15%);
+    --colour-darkest: hsl(120, 5%, 20%);
     --colour-darker: hsl(120, 5%, 50%);
     --colour-normal: hsl(120, 5%, 70%);
-    --colour-lighter: hsl(120, 5%, 80%);
-    --colour-lightest: hsl(120, 5%, 98%);
+    --colour-lighter: hsl(120, 5%, 95%);
+    --colour-lightest: hsl(120, 5%, 100%);
+
+    --colour-background: var(--colour-lighter);
 }
 
 * {
@@ -24,11 +27,13 @@
     line-height: 1.4rem;
 
     color: var(--colour-darkest);
-    background-color: var(--colour-lighter);
+    background-color: var(--colour-background);
+
+    border:1px solid var(--colour-normal)
 }
 
 .container {
-    max-height: 50vh;
+    max-height: 60vh;
     overflow-x:hidden;
     overflow-y:scroll;
 }
@@ -56,21 +61,20 @@
 
         & span {
             padding:0.3rem 0.6rem;
-            background-color: var(--colour-lighter);
+            background-color: var(--colour-background);
             color:var(--colour-darkest);
         }
     }
 
     .reset-filters {
         padding: 0.3rem 0.6rem;
-        background-color: var(--colour-lightest);
-        border:none;
+        background-color: var(--colour-background);
+        border:var(--border-width-filter-control) solid transparent;
         color:var(--colour-darkest);
         cursor:pointer;
         
         &:hover{
-            background-color: var(--colour-darker);
-            color:var(--colour-lightest);
+            border-color:var(--colour-normal);
         }
     }
 }
@@ -86,7 +90,7 @@
     & label {
         margin: 0;
         padding:0;
-        border:2px solid transparent;
+        border:var(--border-width-filter-control) solid transparent;
         transition:border-color ease-in-out 200ms;
     }
     
@@ -95,8 +99,8 @@
         margin: 0;
         padding: 0.2rem 0.5rem;
         text-align: center;
-        background-color: var(--colour-lightest);
-        transition:background-color ease-in-out 200ms;
+        background-color: var(--colour-background);
+        transition: background-color ease-in-out 200ms;
     }
 
     & label:hover {
@@ -106,7 +110,7 @@
     &.tags {
         & label {
             & span {
-                background-color: var(--colour-lighter);
+                background-color: var(--colour-background);
             }
             &:has(input[checked]) span {
                 background-color: var(--colour-lightest);
@@ -116,11 +120,14 @@
 
     &.switch {
         & label {
-            & input[value='on'] ~ span.off {
-                background-color: var(--colour-lighter);
+            & span {
+                background-color: var(--colour-background);
             }
-            & input[value='off'] ~ span.on {
-                background-color: var(--colour-lighter);
+            & input[value='on'] ~ span.on {
+                background-color: var(--colour-lightest);
+            }
+            & input[value='off'] ~ span.off {
+                background-color: var(--colour-lightest);
             }
         }
     }
@@ -164,6 +171,7 @@
 }
 
 .events {
+    min-height: 20vh;
     z-index: 20;
     flex-basis: 100%;
 }
@@ -233,14 +241,14 @@ cite {
 .x-axis {
     display: none;
     position:sticky;
-    bottom:0;
-    background-color: var(--colour-lighter);
+    bottom:-1px;
+    background-color: var(--colour-background);
     z-index: 30;
 }
 
 figcaption {
     display: block;
-    padding: 0.5rem;
+    padding: 0;
     margin: 1rem 0 0 0;
     text-align: center;
     font-weight: bold;
@@ -294,21 +302,24 @@ figcaption {
 /* end event-image */
 
 [data-view="chart"] {
+
+    position: relative;
+
     .container {
         display: flex;
         align-items: flex-start;
-        position: relative;
         z-index: 10;
     }
 
     .summary {
         z-index: 30;
-        flex-basis: 0%;
-        position: relative;
+        max-width:0;
+        position: absolute;
         visibility: hidden;
+        overflow-y:scroll;
         opacity: 0;
         background-color: var(--colour-lightest);
-        transition: flex-basis ease-in-out 300ms, opacity ease-in-out 600ms;
+        transition: max-width ease-in-out 200ms, opacity ease-in-out 600ms;
         overflow-wrap: break-word;
         .event-image {
             display: none;
@@ -323,8 +334,9 @@ figcaption {
             cursor: pointer;
             font-size: 1.2rem;
             padding: 0.2rem 0.4rem;
+            border:1px solid transparent;
             &:hover {
-                background-color: var(--colour-normal);
+                border-color: var(--colour-border-controls);
             }
         }
         .title,
@@ -340,13 +352,17 @@ figcaption {
         }
     }
 
+    .events {
+        margin-left:0;
+        transition: margin-left 300ms ease-in-out;
+    }
+
     .container.show-summary {
         gap: 1rem;
         .summary {
             opacity: 1;
             visibility: visible;
-            flex-basis: 50%;
-            max-width: 50%;
+            max-width: 46% !important;
             padding: 0.5rem;
             .close {
                 display: block;
@@ -355,7 +371,7 @@ figcaption {
             }
         }
         .events {
-            flex-basis: 50%;
+            margin-left:50%;
             .event:not(.selected) {
                 opacity: 0.8;
             }
@@ -430,10 +446,13 @@ figcaption {
     [data-view="chart"] .container.show-summary {
         gap: 0;
         .summary {
-            flex-basis: 100%;
+            /* flex-basis: 100%; */
+            margin-right:1rem;
+            max-width:100%;
         }
         .events {
-            flex-basis: 0%;
+            /* flex-basis:0; */
+            width:0;
             opacity: 0;
             visibility: hidden;
             overflow: hidden;
